tests/snapshots/run_wpt_conformance__litert_reduceProduct_float32_0D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_product.https.any.js reduceProduct float32 0D tensor default options, litert
 reduce_product :: reduceProduct float32 0D tensor default options: index 0: actual=0.000000000000000000000000000000000000000000001 expected=-68.75912 ulp=1116308652 tolerance=32
  inputs: reduceProductInput: [-68.75911712646484]
  expected reduceProductOutput: [-68.75912]
  actual reduceProductOutput: [0.000000000000000000000000000000000000000000001]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceProductInput: f32[];
  }

  nodes {
    [reduceProductOutput] = reduceProduct(reduceProductInput, axes=null, keepDimensions=false, label="");
  }

  outputs { reduceProductOutput; }
}
