tests/snapshots/run_wpt_conformance__litert_reduceProduct_float32_1D_constant_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_product.https.any.js reduceProduct float32 1D constant tensor default options, litert
 reduce_product :: reduceProduct float32 1D constant tensor default options: index 0: actual=-0.00000000000000000000000016033408 expected=15855959000000000000000000000000000000 ulp=2474989528 tolerance=32
  inputs: reduceProductInput: [-68.75911712646484, 99.44961547851563, 24.86055564880371, -44.23515319824219, -22.699743270874023, 79.97555541992188, 14.4650239944458, 49.23109436035156, 30.058706283569336, 69.45106506347656, -20.15709686279297, -58.0255126953125, 51.896610260009766, -2.020799160003662, 39.392974853515625, 26.78073501586914, -97.9765167236328, 48.66154479980469, -85.19523620605469, -18.16986083984375, 64.83759307861328, -14.95883846282959, -74.50932312011719, -11.319679260253906] (constant)
  expected reduceProductOutput: [15855959000000000000000000000000000000]
  actual reduceProductOutput: [-0.00000000000000000000000016033408]

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f32[24] @bytes([171, 132, 137, 194, 52, 230, 198, 66, 107, 226, 198, 65, 204, 240, 48, 194, 19, 153, 181, 193, 124, 243, 159, 66, 189, 112, 103, 65, 164, 236, 68, 66, 59, 120, 240, 65, 242, 230, 138, 66, 188, 65, 161, 193, 32, 26, 104, 194, 33, 150, 79, 66, 198, 84, 1, 192, 104, 146, 29, 66, 242, 62, 214, 65, 250, 243, 195, 194, 108, 165, 66, 66, 246, 99, 170, 194, 224, 91, 145, 193, 217, 172, 129, 66, 103, 87, 111, 193, 198, 4, 149, 194, 104, 29, 53, 193]);
  }

  nodes {
    [reduceProductOutput] = reduceProduct(operand_0, axes=null, keepDimensions=false, label="");
  }

  outputs { reduceProductOutput; }
}
